TEST_PROGRAMS/INVALID/AMIEL_KOLLEK/bad_declaration.min
# Bad Declaration
# ---------------
#
# Invalid declarations
# and a few missing semicolons
#


var x: int; # all good
var y; # missing type
var z: foo; # bad type
var s = "String": string;

print x 


